--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,11 @@ dependencies = [
   "torchaudio==2.8.*",
   "tqdm>=4.67.1",
   "transformers==4.52.1",
+  "requests",
+  "python-multipart",
+  "fastapi",
+  "uvicorn[standard]",
+  "webrtcvad-wheels",
 
   # Use "wetext" on Windows/Mac, otherwise "WeTextProcessing" on Linux.
   "wetext>=0.0.9; sys_platform != 'linux'",
