--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ http {
   upstream indextts_upstream {
     least_conn;
     server revoltts1:8000 max_fails=3 fail_timeout=30s;
-    server revoltts2:8000 max_fails=3 fail_timeout=30s;
+    # server revoltts2:8000 max_fails=3 fail_timeout=30s;
     # server revoltts3:8000 max_fails=3 fail_timeout=30s;
     # 先注释 keepalive，确认不是长连接问题
     # keepalive 64;
